# spec-home-specification

./: .gitignore  Makefile  README.md  package.json
.github/workflows/: pages.yml
balfour/: README.md
balfour/contractors-and-suppliers/: README.md
balfour/contractors-and-suppliers/contractors/carpet-contractor/: README.md
balfour/contractors-and-suppliers/contractors/concrete-contractor/: README.md
balfour/contractors-and-suppliers/contractors/design/: README.md
balfour/contractors-and-suppliers/contractors/drywall-contractor/: README.md
balfour/contractors-and-suppliers/contractors/electrical-contractor/: README.md
balfour/contractors-and-suppliers/contractors/engineer/: README.md
balfour/contractors-and-suppliers/contractors/excavation-contractor-general/: README.md
balfour/contractors-and-suppliers/contractors/excavation-contractor-septic/: README.md
balfour/contractors-and-suppliers/contractors/finish-carpenter/: README.md
balfour/contractors-and-suppliers/contractors/finish-cleaning-contractor/: README.md
balfour/contractors-and-suppliers/contractors/garage-door-contractor/: README.md
balfour/contractors-and-suppliers/contractors/glass-contractor/: README.md
balfour/data/: balfour.json
balfour/docs/: decisions-todo-checklist.md  material-takeoff-briefing.md  material-takeoff-checklist.md  quotes-checklist.md  suppliers-and-contractors.md
balfour/reference-docs/: README.md
tools/: pyproject.toml
tools/src/price_tracker/: cli.py  fetcher.py  models.py  renderer.py  report.py
tools/tests/: test_models.py
(+51 files in other folders)
