[project]
name = "price-tracker"
version = "0.1.0"
description = "Balfour home material selection tracker and Markdown renderer"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.scripts]
price-tracker = "price_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
